--- a/static/css/_adaptive.scss
+++ b/static/css/_adaptive.scss
@@ -28,6 +28,15 @@
     }
 }
 
+@media(max-width: 1260px) {
+    .slick-prev {
+        display: none !important;
+    }
+    .slick-next {
+        display: none !important;
+    }
+}
+
 @media(max-width: 1210px) {
     .twise-card {
         img {
