--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2595,6 +2595,12 @@ body {
     li {
         margin-left: 15px;
     }
+    ul {
+        padding-left: 20px;
+        li {
+            padding-bottom: 8px;
+        }
+    }
 }
 
 .info-style b {
