--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2023,8 +2023,8 @@ body {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  min-width: 306px;
-  min-height: 106px;
+  max-width: 306px;
+  max-height: 106px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
