--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -956,6 +956,12 @@ body {
         color: $black;
         font-weight: 450;
     }
+    .addstyle {
+        display: block;
+    }
+
+
+
     .about_slider_top {
         margin-top: 32px;
         // margin-bottom: 32px;
