--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1885,8 +1885,8 @@ body {
             background: $light_blue;
             box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
-            max-width: 306px;
-            max-height: 106px;
+            width: 360px;
+            height: 109px;
             display: flex;
             justify-content: center;
             align-items: center;
